--- a/TT9L-04/templates/templates.html
+++ b/TT9L-04/templates/templates.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>Login Authentication System in Flask</h1>
-    <a href="{{url_for('login')}}">Login Page</a>
+    <a href="{{url_for('login')}}">Login Page</a><br>
+    <a href="{{url_for('register')}}">SignUp Page</a><br>
 </body>
 </html>
