--- a/TT9L-04/templates/register.html
+++ b/TT9L-04/templates/register.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>SignUp Page</h1>
+    <a href="{{url_for('register')}}">Already have an account? Login</a>
 </body>
 </html>
