--- a/TT9L-04/templates/templates.html
+++ b/TT9L-04/templates/templates.html
@@ -9,7 +9,7 @@
 
 
 <body>
-    <h1>Login Authentication System in Flask</h1>
+    <h1>Welcome to the Best Expense Tracker in the World</h1>
     <a href="{{url_for('login')}}">Login Page</a><br>
     <a href="{{url_for('register')}}">SignUp Page</a><br>
 </body>
