--- a/TT9L-04/templates/login.html
+++ b/TT9L-04/templates/login.html
@@ -7,6 +7,15 @@
 </head>
 <body>
     <h1>Login Page</h1>
+
+    <form method="POST" action="">
+        {{ form.hidden_tag() }}
+        {{ form.username }}
+        {{ form.password }}
+        {{ form.submit }}
+    </form>
+
+
     <a href="{{url_for('register')}}">Don't have an account? Sign Up</a>
 </body>
 </html>
